--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "history": "^5.1.0",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
+    "react-avatar": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-moment": "^1.1.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
